# fast_api_playground

./: README.md  main.py  pyproject.toml  temp_db.py
models/: models.py  temp_db.py
routers/: auth.py  security.py  users.py
tests/: test_users.py
views/: views.py
