[project]
name = "fast-api-playground"
version = "0.1.0"
description = ""
authors = [
    {name = "Sunzheini",email = "daniel_zorov@abv.bg"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard] (>=0.116.1,<0.117.0)",
    "requests (>=2.32.5,<3.0.0)",
    "uvicorn[standard] (>=0.35.0,<0.36.0)",
    "gevent (>=25.8.2,<26.0.0)",
    "debugpy (>=1.8.16,<2.0.0)",
    "sqlalchemy (>=2.0.43,<3.0.0)",
    "python-multipart (>=0.0.20,<0.0.21)",
    "python-jose[cryptography] (>=3.5.0,<4.0.0)",
    "pytest (>=8.4.1,<9.0.0)",
    "reactpy (>=1.1.0,<2.0.0)",
    "passlib[bcrypt] (>=1.7.4,<2.0.0)"
]

[tool.poetry.scripts]
# Convenience script to start in debug (reload + debug logs)
dev = "uvicorn.main:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
